botones para grabar y parar

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">Recorder</string>
     <string name="instructions">Instructions</string>
+    <string name="start">Start recording</string>
+    <string name="stop">Stop recording</string>
 </resources>
