--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Recorder</string>
     <string name="instructions">Instructions</string>
+    <string name="start">Start recording</string>
+    <string name="stop">Stop recording</string>
 </resources>
