--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,6 +2,10 @@
 <resources>
     <string name="app_name">Recorder</string>
     <string name="instructions">Instructions</string>
-    <string name="start">Start recording</string>
-    <string name="stop">Stop recording</string>
+    <string name="start_rec">Start recording</string>
+    <string name="stop_rec">Stop recording</string>
+    <string name="start_play">Start playing</string>
+    <string name="stop_play">Stop playing</string>
+    <string name="wait_play">Wait until finish playing</string>
+    <string name="wait_rec">Wait until finish recording</string>
 </resources>
