--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Recorder</string>
+    <string name="app_name">Espere a que termine la grabación</string>
     <string name="instructions">Instrucciones</string>
-    <string name="start">Empezar grabación</string>
-    <string name="stop">Parar grabación</string>
+    <string name="start_rec">Empezar grabación</string>
+    <string name="stop_rec">Parar grabación</string>
+    <string name="start_play">Empezar reproducción</string>
+    <string name="stop_play">Parar la reproducción</string>
+    <string name="wait_play">Espere a que termine la reproducción</string>
+    <string name="wait_rec">Espere a que termine la grabación</string>
 </resources>
