--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,6 +2,10 @@
 <resources>
     <string name="app_name">Recorder</string>
     <string name="instructions">Instructions</string>
-    <string name="start">Commencer l\'enregistrement</string>
-    <string name="stop">Arrêter l\'enregistrement</string>
+    <string name="start_rec">Commencer l\'enregistrement</string>
+    <string name="stop_rec">Arrêter l\'enregistrement</string>
+    <string name="start_play">Commencer la reproduction</string>
+    <string name="stop_play">Arrêter la reproduction</string>
+    <string name="wait_play">Attendez jusqu\'à ce que la reproduction</string>
+    <string name="wait_rec">Attendez jusqu\'à ce que l\'enregistrement</string>
 </resources>
