--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="instructions">Instructions</string>
     <string name="start">Start recording</string>
     <string name="stop">Stop recording</string>
+    <string name="robotIP">Set the robot\'s IP</string>
+    <string name="testConnection">Test connection</string>
 </resources>
