Envio de mensajes al servidor.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,7 @@
     <string name="stop">Stop recording</string>
     <string name="robotIP">Set the robot\'s IP</string>
     <string name="testConnection">Test connection</string>
+    <string name="connectionError">Sorry, we\'re unable to connect to the robot</string>
+    <string name="connected">Connection successful</string>
+    <string name="disconnected">First test your connection</string>
 </resources>
