--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -6,4 +6,7 @@
     <string name="stop">Arrêter l\'enregistrement</string>
     <string name="robotIP">Définir IP du robot</string>
     <string name="testConnection">Tester la connexion</string>
+    <string name="connectionError">Désolé, nous ne pouvons pas se connecter au robot</string>
+    <string name="connected">Connexion réussie</string>
+    <string name="disconnected">Tout d\'abord tester votre connexion</string>
 </resources>
