--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,4 +13,5 @@
     <string name="connectionError">Sorry, we\'re unable to connect to the robot</string>
     <string name="connected">Connection successful</string>
     <string name="disconnected">First test your connection</string>
+    <string name="ip">192.168.1.5</string>
 </resources>
