--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -13,4 +13,5 @@
     <string name="connectionError">Lo sentimos, no fue posible establecer la conexión con el robot</string>
     <string name="connected">Conexión exitosa</string>
     <string name="disconnected">Prueba primero la conexión</string>
+    <string name="ip">192.168.1.5</string>
 </resources>
