--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,4 +14,5 @@
     <string name="connected">Conexión exitosa</string>
     <string name="disconnected">Prueba primero la conexión</string>
     <string name="ip">192.168.1.5</string>
+    <string name="invalid_ip">Número de IP invalido</string>
 </resources>
