--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="connected">Connection successful</string>
     <string name="disconnected">First test your connection</string>
     <string name="ip">192.168.1.5</string>
+    <string name="invalid_ip">IP number not valid</string>
 </resources>
