--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -15,4 +15,14 @@
     <string name="disconnected">Prueba primero la conexión</string>
     <string name="ip">192.168.1.5</string>
     <string name="invalid_ip">Número de IP invalido</string>
+    <string name="title_activity_login">Inicio de sesión</string>
+    <string name="sign_in">Inicio de sesión</string>
+    <string name="error_sign_in">El inicio de sesión fallo.</string>
+    <string name="register">Registro</string>
+    <string name="recordCommands">Grabar comandos</string>
+    <string name="registerInstr">Completa el registro.</string>
+    <string name="recordName">Graba tu nombre</string>
+    <string name="recordingName">Di tu nombre.</string>
+    <string name="finishRecording">Termino la grabación</string>
+    <string name="labelName">Nombre</string>
 </resources>
