--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -19,10 +19,13 @@
     <string name="sign_in">Inicio de sesión</string>
     <string name="error_sign_in">El inicio de sesión fallo.</string>
     <string name="register">Registro</string>
-    <string name="recordCommands">Grabar comandos</string>
     <string name="registerInstr">Completa el registro.</string>
     <string name="recordName">Graba tu nombre</string>
     <string name="recordingName">Di tu nombre.</string>
     <string name="finishRecording">Termino la grabación</string>
     <string name="labelName">Nombre</string>
+    <string name="recordingGo">Grabar Go</string>
+    <string name="recordingStop">Grabar Stop</string>
+    <string name="recordingLeft">Grabar Left</string>
+    <string name="recordingRight">Grabar Right</string>
 </resources>
