--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -15,4 +15,8 @@
     <string name="disconnected">First test your connection</string>
     <string name="ip">192.168.1.5</string>
     <string name="invalid_ip">IP number not valid</string>
+    <string name="go">Go</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
+    <string name="stop">Stop</string>
 </resources>
