--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -15,4 +15,8 @@
     <string name="disconnected">Tout d\'abord tester votre connexion</string>
     <string name="ip">192.168.1.5</string>
     <string name="invalid_ip">Numéro IP pas valide</string>
+    <string name="go">Go</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
+    <string name="stop">Stop</string>
 </resources>
