--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -28,4 +28,5 @@
     <string name="recordingStop">Record Stop</string>
     <string name="recordingLeft">Record Left</string>
     <string name="recordingRight">Record Right</string>
+    <string name="correctRegister">Register successful, you can log in now.</string>
 </resources>
