--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -29,4 +29,5 @@
     <string name="recordingLeft">Left record</string>
     <string name="recordingRight">Right record</string>
     <string name="correctRegister">Inscrivez-vous réussi, vous pouvez vous connecter maintenant.</string>
+    <string name="commandNotFound">Commande non trouvée. Réessayer</string>
 </resources>
