--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="recordingLeft">Record Left</string>
     <string name="recordingRight">Record Right</string>
     <string name="correctRegister">Register successful, you can log in now.</string>
+    <string name="commandNotFound">Command not found. Try again</string>
 </resources>
