--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -30,4 +30,5 @@
     <string name="recordingRight">Grabar Right</string>
     <string name="correctRegister">Registro exitoso, puedes iniciar sesión ahora.</string>
     <string name="commandNotFound">Comando no encontrado, intente de nuevo</string>
+    <string name="logo">Logo</string>
 </resources>
